# ros2_humble

install/my_pkg/share/my_pkg/: package.sh
install/pub_sub_bringup/share/pub_sub_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/publisher_node/lib/publisher_node/: publisher_node
install/publisher_node/share/publisher_node/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/publisher_node/share/publisher_node/launch/: pub_sub.launch.py
install/subscriber_node/lib/subscriber_node/: subscriber_node
install/subscriber_node/share/subscriber_node/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
my_pkg/: package.xml  setup.py
pub_sub_bringup/: package.xml  setup.cfg  setup.py
publisher_node/: package.xml  setup.py
publisher_node/publisher_node/: my_publisher_node.py
subscriber_node/: package.xml  setup.cfg  setup.py
