<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pub_sub_bringup</name>
  <version>0.0.0</version>
  <description>Launch package for publisher and subscriber nodes.</description>
  <maintainer email="jimgeorge1573@gmail.com">ubuntu</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>publisher_node</exec_depend>
  <exec_depend>subscriber_node</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
